--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -34,7 +34,8 @@ $on-laptop: 800px !default;
 // Import partials.
 @import "minima/base",
 "minima/layout",
-"minima/syntax-highlighting";
+"minima/syntax-highlighting",
+"poole/base";
 
 // new 
 .post-tag {
@@ -64,3 +65,4 @@ $on-laptop: 800px !default;
     margin: 0;
     padding: 0
 }
+
