--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -23,5 +23,5 @@ layout: default
     {% endfor %}
   };
 </script>
-<script src="/assets/js/lunr.min.js"></script>
-<script src="/assets/js/search.js"></script>
+<script src="/js/lunr.min.js"></script>
+<script src="/js/search.js"></script>
