--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en " }}">
+{% include head.html %}
 
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
+<body>
+    <a href="#top" id="toTop">Back to top</a>
+    <link rel="stylesheet" type="text/css" href="/css/to_top.css"> {% include header.html %}
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+        <div class="wrapper">
+            {{ content }}
+        </div>
     </main>
-
     {% include footer.html %}
+    <script src="http://code.jquery.com/jquery-3.2.0.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.scrollUp.min.js"></script>
+    <script type="text/javascript">$(function() { $("#toTop").scrollToTop(50); });</script>
 
-  </body>
+</body>
 
 </html>
