--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         </div>
     </main>
     {% include footer.html %}
-    <script src="http://code.jquery.com/jquery-3.2.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="/js/jquery.scrollUp.min.js"></script>
     <script type="text/javascript">$(function() { $("#toTop").scrollToTop(50); });</script>
 
