--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -9,3 +9,12 @@
 
 </script>
   
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?d6fbecf7f031a35334ae901f128e9884";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
