--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
 
   <div class="wrapper">
 
-    <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
+    {% comment %}
+    <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
@@ -46,7 +47,7 @@
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
-
+    {% endcomment %}
   </div>
 
 </footer>
