--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,3 +1,4 @@
+<!--Google Analytics-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -9,6 +10,7 @@
 
 </script>
   
+<!--Baidu Tongji-->
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -26,3 +28,12 @@ _atrk_opts = { atrk_acct:"JbH5p1IWhd10uG", domain:"eastonlee.com",dynamic: true}
 </script>
 <noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=JbH5p1IWhd10uG" style="display:none" height="1" width="1" alt="" /></noscript>
 <!-- End Alexa Certify Javascript -->  
+
+<!--Google AdSense-->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3148129167190298",
+    enable_page_level_ads: true
+  });
+</script>
