--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+description: "This is Easton Lee's personal site where he places his thoughts into words and records his achievements."
 ---
 
 <div class="home">
@@ -14,6 +15,7 @@ layout: default
         <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
+        {{ post.excerpt }}
       </li>
     {% endfor %}
   </ul>
