--- a/assets/main.scss
+++ b/assets/main.scss
@@ -136,40 +136,41 @@ body > .site-header + .container {
 }
 
 // easton: this hover anchors margin-left only applies on "Helvetica Neue" font
+// the 0.2em makes the headings jump alittle
 .post-content h1:hover:before {
   content: "# ";
   opacity: 0.2;
-  margin-left: -0.556em-0.28em;
+  margin-left: -0.556em-0.28em+0.2em;
 }
 
 .post-content h2:hover:before {
   content: "## ";
   opacity: 0.2;
-  margin-left: -0.556em*2-0.28em;
+  margin-left: -0.556em*2-0.28em+0.2em;
 }
 
 .post-content h3:hover:before {
   content: "### ";
   opacity: 0.2;
-  margin-left: -0.556em*3-0.28em;
+  margin-left: -0.556em*3-0.28em+0.2em;
 }
 
 .post-content h4:hover:before {
   content: "#### ";
   opacity: 0.2;
-  margin-left: -0.556em*4-0.28em;
+  margin-left: -0.556em*4-0.28em+0.2em;
 }
 
 .post-content h5:hover:before {
   content: "##### ";
   opacity: 0.2;
-  margin-left: -0.556em*5-0.28em;
+  margin-left: -0.556em*5-0.28em+0.2em;
 }
 
 .post-content h6:hover:before {
   content: "###### ";
   opacity: 0.2;
-  margin-left: -0.556em*6-0.28em;
+  margin-left: -0.556em*6-0.28em+0.2em;
 }
 
 table {
