add Google Social Link to home page, and new content

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,3 +22,17 @@ layout: default
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 
 </div>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Person",
+  "name": "Easton Lee",
+  "url": "http://EastonLee.com",
+  "sameAs": [
+    "https://github.com/EastonLee",
+    "https://twitter.com/EastonLee",
+    "https://linkedin.com/in/EastonLee",
+    "https://plus.google.com/107628046279641393605"
+  ]
+}
+</script>
