new content, add some links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,10 @@
         {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
         {% for my_page in navigation_pages %}
           {% if my_page.title and my_page.title != '404: Page not found' 
-          and my_page.title != 'Blog' and my_page.title != 'Search' %}
+          and my_page.title != 'Blog' 
+          and my_page.title != 'Search' 
+          and my_page.title != 'PGP public key' 
+          %}
             <li class="nav-item">
               <a class="minima-page-link nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             </li>
