--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,10 +34,8 @@
       <ul class="navbar-nav ml-auto">
         {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
         {% for my_page in navigation_pages %}
-          {% if my_page.title and my_page.title != '404: Page not found' 
-          and my_page.title != 'Blog' 
-          and my_page.title != 'Search' 
-          and my_page.title != 'PGP public key' 
+          {% if my_page.title == 'Categories' 
+          or my_page.title == 'About' 
           %}
             <li class="nav-item">
               <a class="minima-page-link nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
