--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
   "@type": "Person",
   "name": "Easton Lee",
   "url": "http://EastonLee.com",
-  "logo": "https://avatars1.githubusercontent.com/u/10185801",
+  "logo": "https://eastonlee.b0.upaiyun.com/avatar.JPG",
   "sameAs": [
     "https://github.com/EastonLee",
     "https://twitter.com/ImEastonLee",
