Google structured data seo finished

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,39 +1,3 @@
 ---
-layout: default
+layout: blog
 ---
-
-<div class="home">
-  <h1 class="page-heading">Blog Posts</h1>
-  {{ content }}
-
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-        {{ post.excerpt }}
-      </li>
-    {% endfor %}
-  </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
-</div>
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "Person",
-  "name": "Easton Lee",
-  "url": "http://EastonLee.com",
-  "image": "https://eastonlee.b0.upaiyun.com/avatar.jpg",
-  "sameAs": [
-    "https://github.com/EastonLee",
-    "https://twitter.com/ImEastonLee",
-    "https://linkedin.com/in/EastonLee",
-    "https://plus.google.com/107628046279641393605"
-  ]
-}
-</script>
