--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,3 +18,5 @@ layout: default
     </div>
     {% if site.disqus.shortname %} {% include disqus_comments.html %} {% endif %}
 </article>
+
+{% seo %}
