--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,22 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-3148129167190298",
+      enable_page_level_ads: true
+    });
+  </script>
+
+  <!-- simple -->
+  <!-- <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-client="ca-pub-3148129167190298"
+      data-ad-slot="6454196862"
+      data-ad-format="auto"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script> -->
 </head>
