Page Level AdSense is less intrusive

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,20 +17,20 @@
   {% endif %}
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- <script>
+  <script>
     (adsbygoogle = window.adsbygoogle || []).push({
       google_ad_client: "ca-pub-3148129167190298",
       enable_page_level_ads: true
     });
-  </script> -->
+  </script>
 
   <!-- simple -->
-  <ins class="adsbygoogle"
+  <!-- <ins class="adsbygoogle"
       style="display:block"
       data-ad-client="ca-pub-3148129167190298"
       data-ad-slot="6454196862"
       data-ad-format="auto"></ins>
   <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  </script> -->
 </head>
