--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,9 +28,9 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="site-title" href="{{ "/" | relative_url}}" style="width: 130px;">{{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="width: 0; flex-grow: 1;">
       <ul class="navbar-nav ml-auto">
         {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
         {% for my_page in navigation_pages %}
