custom sitemap.xml, add datetime to every post and page, for SEO, merged from the below https://github.com/jekyll/jekyll-sitemap/blob/master/lib/sitemap.xml https://gist.github.com/EastonLee/b358b06bfaef764536f73f545af00b27

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -20,6 +20,7 @@ layout: default
   </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  <!-- <p class="small">Generated on {{ site.time }}</p> -->
 
 </div>
 
