--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,14 +14,8 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
   {% if jekyll.environment == 'production' and site.google_analytics %}
+  {% comment %} The following line include google-analytics, Baidu Tongji, Alexa Certify, AdSense code {% endcomment %}
   {% include google-analytics.html %}
   {% endif %}
 
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-3148129167190298",
-      enable_page_level_ads: true
-    });
-  </script>
 </head>
