--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -19,7 +19,7 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  <p class="rss-subscribe">subscribe <a href="{{ "/atom.xml" | relative_url }}">via ATOM</a></p>
   <!-- <p class="small">Generated on {{ site.time }}</p> -->
 
 </div>
