--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,7 @@
         {% for my_page in navigation_pages %}
           {% if my_page.title == 'Categories' 
           or my_page.title == 'About' 
+          or my_page.title == 'Projects' 
           %}
             <li class="nav-item">
               <a class="minima-page-link nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
